--- a/sheets/character-sheet.hbs
+++ b/sheets/character-sheet.hbs
@@ -1,12 +1,14 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="wor {{cssClass}}" autocomplete="off">
 
-    <header class="sheet-header">
+    <header class="wor-sheet-header">
         <img src="{{actor.img}}" data-edit="img" />
         <input type="text" name="name" value="{{actor.name}}" placeholder="Name" />
     </header>
 
-    <section class="form-section">
-        <h3 class="form-header">Details</h3>
+    <section class="wor-section">
+        <h3 class="wor-section-header">
+            <span>Details</span>
+        </h3>
         <div class="form-group">
             <label>HP</label>
             <input type="text" data-dtype="Number" name="data.hp.value" value="{{data.hp.value}}" />
@@ -18,6 +20,36 @@
             <input type="text" data-dtype="Number" name="data.speed" value="{{data.speed}}" />
             &nbsp;ft.
         </div>
+    </section>
+
+    <section class="wor-section">
+        <h3 class="wor-section-header">
+            <span>Active Effects</span>
+            <a data-action="wor-add-effect" title="Add">
+                <i class="fas fa-plus"></i>
+            </a>
+        </h3>
+        {{#if entity.effects}}
+        <ul class="wor-list">
+            {{#each entity.effects as |effect|}}
+            <li>
+                <img src="{{effect.icon}}" />
+                <label>{{effect.label}}</label>
+                <a data-action="wor-edit-effect" data-id="{{effect._id}}" title="Edit">
+                    <i class="fas fa-edit"></i>
+                </a>
+                <a data-action="wor-delete-effect" data-id="{{effect._id}}" title="Delete">
+                    <i class="fas fa-trash"></i>
+                </a>
+            </li>
+            {{/each}}
+        </ul>
+        {{else}}
+        <div class="form-group">
+            <label>None</label>
+        </div>
+        {{/if}}
+
     </section>
 
 </form>
