--- a/sheets/character-sheet.sass
+++ b/sheets/character-sheet.sass
@@ -1,37 +1,67 @@
-.wor.character-sheet
+.wor-sheet-header
+    align-items: center
+    display: flex
+    justify-content: flex-start
 
-    .sheet-header
-        align-items: center
+    img
+        border: none
+        flex: 0 0 64px
+        height: 64px
+
+    input
+        flex: 1
+        font-size: 2em
+        height: auto
+        margin: 0 11px
+
+.wor-section
+    padding: 4px
+
+.wor-section-header
+    align-items: baseline
+    border-bottom: 2px groove #eeede0
+    display: flex
+    font-size: 1em
+    margin: 0 0 0.25em
+    padding: 0
+
+    span
+        color: #23221d
+        flex: 1
+        font: small-caps 1.8em "Modesto Condensed"
+
+.wor .form-group
+    label
+        color: #4b4a44
+        flex: 1
+        font-weight: bold
+        white-space: nowrap
+
+    input[data-dtype=Number]
+        flex: 1
+
+.wor-list
+    margin: 0
+    padding: 0
+
+    li
         display: flex
-        justify-content: flex-start
+        padding: 0.25em 0
 
-        img
-            border: none
-            flex: 0 0 64px
-            height: 64px
+        > :nth-child(n+2)
+            padding-left: 0.25em
 
-        input
-            flex: 1
-            font-size: 2em
-            height: auto
-            margin: 0 11px
+    li:nth-child(even)
+        background-color: rgba(0, 0, 0, 0.05)
 
-    .form-section
-        padding: 4px
+    img
+        border: none
+        display: block
+        height: 16px
+        width: 16px
 
-        .form-header
-            border-bottom: 2px groove #eeede0
-            font-family: "Modesto Condensed"
-            font-variant: small-caps
-            font-size: 1.8em
-            margin-bottom: 0.25em
-
-        .form-group
-            label
-                flex: 1
-                color: #4b4a44
-                font-weight: bold
-                white-space: nowrap
-
-            input[data-dtype=Number]
-                flex: 1
+    label
+        flex: 1
+        overflow-x: hidden
+        text-overflow: ellipsis
+        white-space: nowrap
