--- a/sheets/character-sheet.sass
+++ b/sheets/character-sheet.sass
@@ -18,7 +18,9 @@
     padding: 4px
 
 .wor-section-header
+    align-items: baseline
     border-bottom: 2px groove #eeede0
+    display: flex
     font-size: 1em
     margin: 0 0 0.25em
     padding: 0
@@ -37,3 +39,29 @@
 
     input[data-dtype=Number]
         flex: 1
+
+.wor-list
+    margin: 0
+    padding: 0
+
+    li
+        display: flex
+        padding: 0.25em 0
+
+        > :nth-child(n+2)
+            padding-left: 0.25em
+
+    li:nth-child(even)
+        background-color: rgba(0, 0, 0, 0.05)
+
+    img
+        border: none
+        display: block
+        height: 16px
+        width: 16px
+
+    label
+        flex: 1
+        overflow-x: hidden
+        text-overflow: ellipsis
+        white-space: nowrap
