--- a/src/sheets/character-sheet.hbs
+++ b/src/sheets/character-sheet.hbs
@@ -33,8 +33,10 @@
         <ul class="wor-list">
             {{#each entity.effects as |effect|}}
             <li>
+                <!-- TODO: give icon a background -->
                 <img src="{{effect.icon}}" />
                 <label>{{effect.label}}</label>
+                <label>({{effect.remaining}})</label>
                 <a data-action="wor-edit-effect" data-id="{{effect._id}}" title="Edit">
                     <i class="fas fa-edit"></i>
                 </a>
