--- a/src/sheets/character-sheet.sass
+++ b/src/sheets/character-sheet.sass
@@ -4,7 +4,6 @@
     justify-content: flex-start
 
     img
-        border: none
         flex: 0 0 64px
         height: 64px
 
@@ -13,6 +12,14 @@
         font-size: 2em
         height: auto
         margin: 0 11px
+
+.wor-token-icon-large
+    border: none
+
+.wor-effect-icon-large
+    background: rgba(0, 0, 0, 0.4)
+    border: solid 1px black
+    border-radius: 3px
 
 .wor-section
     padding: 4px
@@ -45,6 +52,7 @@
     padding: 0
 
     li
+        align-items: center
         display: flex
         padding: 0.25em 0
 
@@ -55,10 +63,10 @@
         background-color: rgba(0, 0, 0, 0.05)
 
     img
-        border: none
+        background: rgba(0, 0, 0, 0.4)
         display: block
-        height: 16px
-        width: 16px
+        height: 20px
+        width: 20px
 
     label
         flex: 1
