Added support for rolling initiative checks

--- a/src/sheets/character-sheet.hbs
+++ b/src/sheets/character-sheet.hbs
@@ -16,6 +16,10 @@
             <input type="text" data-dtype="Number" name="data.hp.max" value="{{data.hp.max}}" />
         </div>
         <div class="form-group">
+            <label>Initiative</label>
+            <input type="text" data-dtype="Number" name="data.initiative.final" value="{{data.initiative.final}}" />
+        </div>
+        <div class="form-group">
             <label>Speed</label>
             <input type="text" data-dtype="Number" name="data.speed" value="{{data.speed}}" />
             &nbsp;ft.
