use FormApplication for dialog

--- a/src/initiative/dialog.hbs
+++ b/src/initiative/dialog.hbs
@@ -4,7 +4,7 @@
         <img src='{{turn.img}}' class='wor-medium-image' />
         <div>
             <div>Roll 1d20:</div>
-            <input type='number' min='1' step='1' max='20' class='wor-input' placeholder='Result'>
+            <input name='result' type='number' min='1' step='1' max='20' class='wor-input' placeholder='Result'>
         </div>
     </div>
 
