--- a/src/sheets/character-sheet.hbs
+++ b/src/sheets/character-sheet.hbs
@@ -56,23 +56,23 @@
         {{/if}}
     </section>
 
-    {{#if actor.isLinked}}
+    {{#if heroLabSync}}
     <section class="wor-section">
         <h3 class="wor-section-header">
             <span>Hero Lab Sync</span>
         </h3>
-        {{#if data.heroLab.lastUpdate}}
+        {{#if heroLabSync.lastUpdated}}
         <div class="form-group">
             <label>Last updated</label>
-            <input style='flex:3' type="text" readonly value="{{data.heroLab.lastUpdate}}" />
+            <input style='flex:3' type="text" readonly value="{{heroLabSync.lastUpdated}}" />
         </div>
         <div class="form-group">
             <label>File</label>
-            <input style='flex:3' type="text" readonly value="{{data.heroLab.fileName}}" />
+            <input style='flex:3' type="text" readonly value="{{heroLabSync.file}}" />
         </div>
         <div class="form-group">
             <label>Character</label>
-            <input style='flex:3' type="text" readonly value="{{data.heroLab.characterName}}" />
+            <input style='flex:3' type="text" readonly value="{{heroLabSync.character}}" />
         </div>
         {{else}}
         <p>
@@ -81,7 +81,7 @@
         </p>
         <div class="form-group">
             <label>Sync token</label>
-            <input style='flex:3' type="text" readonly value="{{actor.syncToken}}" />
+            <input style='flex:3' type="text" readonly value="{{heroLabSync.syncToken}}" />
         </div>
         <p>
             Make sure you save your changes.
