--- a/src/sheets/character-sheet.hbs
+++ b/src/sheets/character-sheet.hbs
@@ -61,10 +61,10 @@
         <h3 class="wor-section-header">
             <span>Hero Lab Sync</span>
         </h3>
-        {{#if heroLabSync.lastUpdated}}
+        {{#if heroLabSync.lastUpdate}}
         <div class="form-group">
-            <label>Last updated</label>
-            <input style='flex:3' type="text" readonly value="{{heroLabSync.lastUpdated}}" />
+            <label>Last update</label>
+            <input style='flex:3' type="text" readonly value="{{heroLabSync.lastUpdate}}" />
         </div>
         <div class="form-group">
             <label>File</label>
