wip restructure the data

--- a/src/sheets/character-sheet.hbs
+++ b/src/sheets/character-sheet.hbs
@@ -11,17 +11,17 @@
         </h3>
         <div class="form-group">
             <label>HP</label>
-            <input type="text" data-dtype="Number" name="data.hp.value" value="{{data.hp.value}}" />
+            <input type="text" data-dtype="Number" name="data.attributes.hp.value" value="{{data.attributes.hp.value}}" />
             &nbsp;/&nbsp;
-            <input type="text" data-dtype="Number" name="data.hp.max" value="{{data.hp.max}}" />
+            <input type="text" data-dtype="Number" name="data.attributes.hp.max" value="{{data.attributes.hp.max}}" />
         </div>
         <div class="form-group">
             <label>Initiative</label>
-            <input type="text" data-dtype="Number" name="data.initiative.final" value="{{data.initiative.final}}" />
+            <input type="text" data-dtype="Number" name="data.attributes.init" value="{{data.attributes.init}}" />
         </div>
         <div class="form-group">
             <label>Speed</label>
-            <input type="text" data-dtype="Number" name="data.speed" value="{{data.speed}}" />
+            <input type="text" data-dtype="Number" name="data.attributes.speed.base" value="{{data.attributes.speed.base}}" />
             &nbsp;ft.
         </div>
     </section>
