--- a/src/sheets/character-sheet.sass
+++ b/src/sheets/character-sheet.sass
@@ -2,6 +2,7 @@
     align-items: center
     display: flex
     justify-content: flex-start
+    position: relative
 
     img
         border: none
@@ -13,6 +14,16 @@
         font-size: 2em
         height: auto
         margin: 0 11px
+
+    .uniquity
+        position: absolute
+        right: 11px
+        bottom: -3px
+        color: rgba(0, 0, 0, 0.4)
+        font-size: 0.9em
+
+        &.error
+            color: rgba(255, 0, 0, 0.6)
 
 .wor-section
     padding: 4px
