--- a/src/sheets/character-sheet.sass
+++ b/src/sheets/character-sheet.sass
@@ -48,7 +48,7 @@
         font-weight: bold
         white-space: nowrap
 
-    input[data-dtype=Number]
+    input, select
         flex: 1
 
 .wor-list
