--- a/src/sheets/character-sheet.hbs
+++ b/src/sheets/character-sheet.hbs
@@ -80,7 +80,7 @@
     {{#if items}}
     <section class="wor-section">
         <h3 class="wor-section-header">
-            <span>Unexpected Children</span>
+            <span>Attachments</span>
         </h3>
         <ul class="wor-list">
             {{#each items as |item|}}
