--- a/src/_new/StatusEffect.hbs
+++ b/src/_new/StatusEffect.hbs
@@ -28,12 +28,12 @@
             </div>
         </div>
 
-        {{!-- <div class='form-group'>
+        <div class='form-group'>
             <label>Started on initiative</label>
             <div class='form-fields'>
                 <input type='number' step='0.01' name='flags.wor.initiative' value='{{ data.flags.wor.initiative }}' />
             </div>
-        </div> --}}
+        </div>
 
         <div class='form-group'>
             <label>Duration</label>
