--- a/src/characters/CharacterSheet/template.hbs
+++ b/src/characters/CharacterSheet/template.hbs
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    <section class="wor-section">
+    <section class="wor-section wor-effects">
         <h3 class="wor-section-header">
             <span>Active Effects</span>
             <a data-action="wor-add-effect" title="Add">
