--- a/src/characters/CharacterSheet/template.hbs
+++ b/src/characters/CharacterSheet/template.hbs
@@ -49,7 +49,7 @@
 
     <section class="wor-section wor-effects">
         <h3 class="wor-section-header">
-            <span>Active Effects</span>
+            <span>Status Effects</span>
             <a data-action="wor-add-effect" title="Add">
                 <i class="fas fa-plus"></i>
             </a>
