finished drag and drop

--- a/src/characters/CharacterSheet/styles.sass
+++ b/src/characters/CharacterSheet/styles.sass
@@ -58,6 +58,15 @@
     justify-content: end
     align-items: center
 
+.wor-checkbox
+    display: flex
+    align-content: center
+    align-items: center
+    white-space: nowrap
+
+    input
+        margin-left: 0
+
 .wor-list
     margin: 0
     padding: 0
