Cast spell on targeted creatures

--- a/src/spells/ReceiveSpellDialog.hbs
+++ b/src/spells/ReceiveSpellDialog.hbs
@@ -22,7 +22,7 @@
     </section>
 
     <section class='wor-section'>
-        The resulting status effect will have a duration of
+        The resulting status effect{{#if multiple}}s{{/if}} will have a duration of
         <span name='duration'></span>.
     </section>
 
