--- a/src/spells/SpellConfig.hbs
+++ b/src/spells/SpellConfig.hbs
@@ -2,7 +2,7 @@
 
     <header class='wor-sheet-header'>
         <img src='{{item.img}}' data-edit='img' />
-        <input type='text' name='name' value='{{item.name}}' placeholder='Name' />
+        <input type='text' required name='name' value='{{item.name}}' placeholder='Name' />
     </header>
 
     <section class='wor-section'>
