support for communal spells

--- a/src/spells/ReceiveSpellDialog.hbs
+++ b/src/spells/ReceiveSpellDialog.hbs
@@ -3,7 +3,9 @@
     <div class='flexrow'>
         <img src='{{vm.spell.img}}' class='wor-medium-image' />
         <div>
-            This <abbr title='pun intended'>wizard</abbr> will add {{vm.spell.name}} to {{vm.targetNames}}.
+            This <abbr title='pun intended'>wizard</abbr> will add
+            <i style='text-transform: lowercase'>{{vm.spell.name}}</i>
+            to {{vm.targetNames}}.
         </div>
     </div>
 
