--- a/src/spells/ReceiveSpellDialog.hbs
+++ b/src/spells/ReceiveSpellDialog.hbs
@@ -29,7 +29,11 @@
     </section>
 
     <button type='submit'>
+        {{#if vm.needsGM}}
+        <i class='fas fa-paper-plane'></i> Send to GM
+        {{else}}
         <i class='fas fa-plus'></i> Add status effect
+        {{/if}}
     </button>
 
 </form>
