--- a/src/characters/CharacterSheet/template.hbs
+++ b/src/characters/CharacterSheet/template.hbs
@@ -51,9 +51,11 @@
         <div class='wor-drop-target-overlay'></div>
         <h3 class='wor-section-header'>
             <span>Status Effects</span>
+            {{#if editable}}
             <a data-action='wor-add-effect' title='Add'>
                 <i class='fas fa-plus'></i>
             </a>
+            {{/if}}
         </h3>
         {{#if effects}}
         <ul class='wor-list'>
@@ -62,12 +64,14 @@
                 <img src='{{effect.icon}}' />
                 <label>{{effect.label}}</label>
                 <label>({{effect.remaining}})</label>
+                {{#if ../editable}}
                 <a data-action='wor-edit-effect' data-id='{{effect._id}}' title='Edit'>
                     <i class='fas fa-edit'></i>
                 </a>
                 <a data-action='wor-delete-effect' data-id='{{effect._id}}' title='Delete'>
                     <i class='fas fa-trash'></i>
                 </a>
+                {{/if}}
             </li>
             {{/each}}
         </ul>
